and footer and final push

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
                 <li>The People's President: Dr A P J Abdul Kalam by S M Khan; Bloomsbury Publishing, 2016</li>
                </ul>
             </section>
+            <footer>
+                <p>Read more about A.P.J Kalam <a href="https://en.wikipedia.org/wiki/A._P._J._Abdul_Kalam">Wikipedia</a></p>
+            </footer>
         </div>
     </div>
 </body>
